--- a/style.css
+++ b/style.css
@@ -45,3 +45,27 @@
 	padding-top: 10px;
 }
 
+#intro {
+  border-width: 2px;
+  background-color: #E0E0E0;
+  width: 50%;
+  margin: 0 auto;
+  box-shadow: 10px 10px 5px #888888;
+  font-family: optima;
+  z-index: 999;
+  position: absolute;
+  left: 0;
+  right: 0;
+  border-radius: 25px;
+  padding:10px;
+  font-size: 14px;
+  line-height: 85%;
+}
+
+.blurred {
+  -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -ms-filter: blur(5px);
+    -o-filter: blur(5px);
+    filter: blur(5px);
+}
