--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
   border-radius: 25px;
   padding:10px;
   font-size: 14px;
-  line-height: 85%;
+/*  line-height: 90%;*/
 }
 
 .blurred {
@@ -68,4 +68,12 @@
     -ms-filter: blur(5px);
     -o-filter: blur(5px);
     filter: blur(5px);
+}
+
+#picture {
+	text-align: center;
+}
+
+#continueText {
+	font-size: 17px;
 }
